# realtime-fraud-ml

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-ci.txt  requirements.txt
.github/workflows/: ci.yml
fraud_ml/: __init__.py  config.py  serve.py  train.py
fraud_ml/data/: generator.py
fraud_ml/drift/: report.py
fraud_ml/features/: build.py  online.py
fraud_ml/stream/: consumer.py  producer.py
models/: feature_spec.json  fraud_xgb.json
reports/: drift_report.html  drift_summary.md  latency.md
scripts/: benchmark_latency.py
tests/: test_api.py  test_benchmark.py  test_features.py  test_generator.py  test_train.py
