[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-ml"
version = "0.1.0"
description = "ML fraud scoring on a card-transaction stream"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Abbas Ramazanov" }]
dependencies = []

[tool.setuptools.packages.find]
include = ["fraud_ml*"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "mlruns", "data"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
